@@ -73,18 +73,19 @@ type
 
 const
   {$IFDEF WINDOWS}
-  skindirectoryDevelopment = 'winstskin';
+  skindirectoryDevelopment = 'skin';
   skindirectoryDefault = 'skin';
   skindirectoryCustomWin = '..'+PathDelim+'custom'+PathDelim+'customskin';
   skindirectoryCustomWinOld = '..'+PathDelim+'custom'+PathDelim+'winstskin';
   {$ENDIF WINDOWS}
   {$IFDEF LINUX}
-  skindirectoryDevelopment = 'winstskin';
-  skindirectoryDefault = '/usr/share/opsi-script/skin';
+  skindirectoryDevelopment = 'skin';
+  skindirectoryDefault = 'skin';
+  skindirectoryCompatibility = '/usr/share/opsi-script/skin';
   skindirectoryCustomWin = '/usr/share/opsi-script/customskin';
   {$ENDIF LINUX}
   {$IFDEF DARWIN}
-  skindirectoryDevelopment = 'winstskin';
+  skindirectoryDevelopment = 'skin';
   skindirectoryDefault = '../Resources/skin';
   skindirectoryCustomWin = '/usr/local/share/opsi-script/customskin';
   {$ENDIF DARWIN}
@@ -139,6 +140,8 @@ begin
     skinDir := skindirectoryCustomWin
   else if FileExists(skindirectoryDefault+PathDelim+'skin.ini') then
     skinDir := skindirectoryDefault
+  else if FileExists(skindirectoryCompatibility+PathDelim+'skin.ini') then
+    skinDir := skindirectoryCompatibility
   else if FileExists(ExtractFilePath(ParamStr(0)) + skindirectoryDevelopment+PathDelim+'skin.ini') then
     skinDir := ExtractFilePath(ParamStr(0)) + skindirectoryDevelopment;
   {$ENDIF LINUX}
